[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "dag-triage"
version = "1.0.0"
description = "AI-assisted DAG failure triage plugin for Apache Airflow"
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
keywords = ["airflow", "plugin", "triage", "observability", "dag"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: Apache Airflow",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Monitoring",
]
dependencies = [
    "pyyaml>=6.0",
    "fastapi>=0.100",
]

[project.optional-dependencies]
openai = ["openai>=1.0"]
dev = [
    "pytest>=8.0",
    "httpx>=0.24",
]

[project.urls]
Repository = "https://github.com/break-through-19/airflow"
Issues = "https://github.com/break-through-19/airflow/issues"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src", "tests"]

[project.entry-points."airflow.plugins"]
dag_triage = "dag_triage.plugin:DagTriagePlugin"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
dag_triage = ["../data/*.yaml"]
