# Licensed to the Apache Software Foundation (ASF) under one
# or more contributor license agreements.  See the NOTICE file
# distributed with this work for additional information
# regarding copyright ownership.  The ASF licenses this file
# to you under the Apache License, Version 2.0 (the
# "License"); you may not use this file except in compliance
# with the License.  You may obtain a copy of the License at
#
#   http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing,
# software distributed under the License is distributed on an
# "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
# KIND, either express or implied.  See the License for the
# specific language governing permissions and limitations
# under the License.

[metadata]
version=1.1.0
name = apache-airflow-upgrade-check
description = Check for compatibility between Airflow versions
long_description = file: airflow/upgrade/README.md
long_description_content_type = text/markdown
url = https://airflow.apache.org
author = Apache Airflow PMC
author-email = dev@airflow.apache.org
license = Apache License 2.0
license_files =
   LICENSE
   NOTICE
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
keywords = airflow, upgrade
project_urls =
    Source Code=https://github.com/apache/airflow
    Bug Tracker=https://github.com/apache/airflow/issues
    Documentation=https://airflow.apache.org/docs/

[options]
packages = find:
install_requires =
    apache-airflow>=1.10.13,<3
    importlib-metadata~=2.0; python_version<"3.8"
    packaging
python_requires = >=2.7,!=3.0.*,!=3.1.*,!=3.2.*,!=3.3.*,!=3.4.*
setup_requires =
    setuptools>=40.0
    wheel
zip_safe = no

[options.packages.find]
include =
  airflow.upgrade
  airflow.upgrade.*

[bdist_wheel]
universal=1
