# Licensed to the Apache Software Foundation (ASF) under one
# or more contributor license agreements.  See the NOTICE file
# distributed with this work for additional information
# regarding copyright ownership.  The ASF licenses this file
# to you under the Apache License, Version 2.0 (the
# "License"); you may not use this file except in compliance
# with the License.  You may obtain a copy of the License at
#
#   http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing,
# software distributed under the License is distributed on an
# "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
# KIND, either express or implied.  See the License for the
# specific language governing permissions and limitations
# under the License.

[metadata]
version = 0.0.1
name = apache-airflow-breeze
summary = Apache Airflow Breeze development environment
author = Apache Software Foundation
author_email = dev@airflow.apache.org
url = https://airflow.apache.org/
long_description = file: README.md
long_description_content_type = text/markdown
license = Apache License 2.0
license_files =
    LICENSE
    NOTICE
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
project_urls =
    Documentation=https://github.com/apache/airflow/BREEZE.rst
    Bug Tracker=https://github.com/apache/airflow/issues
    Source Code=https://github.com/apache/airflow
    Slack Chat=https://s.apache.org/airflow-slack
    Twitter=https://twitter.com/ApacheAirflow
    YouTube=https://www.youtube.com/channel/UCSXwxpWZQ7XZ1WL3wqevChA/

[options]
zip_safe = False
include_package_data = True
# Mainly because of distutils deprecation and some packages not being compatible with it, we should
# Limit airflow to < 3.12 until those dependencies are ready and until we can support Python 3.12
python_requires = ~=3.8,<3.12
package_dir=
    =src
packages = find:
install_requires =
    click>=8.1.7
    filelock>=3.13.0
    inputimeout>=1.0.4
    jinja2>=3.1.0
    packaging>=23.2
    pendulum>=2.1.2,<3
    pre-commit>=3.5.0
    psutil>=5.9.6
    pytest>=7.4.0
    pytest-xdist>=3.3.1
    pyyaml>=6.0.1
    PyGithub>=2.1.1
    requests>=2.30.0
    rich>=13.6.0
    rich-click>=1.7.1
    gitpython>=3.1.40
    twine>=4.0.2
    wheel>=0.41.3
    setuptools>=68.2.2
    jsonschema>=4.19.1

[options.packages.find]
where=src

[options.entry_points]
console_scripts=
    breeze=airflow_breeze.breeze:main

[bdist_wheel]
python-tag=py3

[mypy]
ignore_missing_imports = True
no_implicit_optional = True
warn_redundant_casts = True
warn_unused_ignores = False
pretty = True

[isort]
line_length=110
combine_as_imports = true
default_section = THIRDPARTY
known_first_party=airflow,airflow_breeze,tests
skip=build,.tox,venv
profile = black
